tests/snapshots/yaml_suite_snapshots__yaml_suite_X38W_tight.snap
---
source: tests/yaml_suite_snapshots.rs
expression: tight
---
- dump: "? &a\n- a\n- &b b\n: *b\n*a :\n- c\n- *b\n- d\n"
  from: NimYAML tests
  name: Aliases in Flow Objects
  tags: alias complex-key flow
  tree: "+STR\n +DOC\n  +MAP {}\n   +SEQ [] &a\n    =VAL :a\n    =VAL &b :b\n   -SEQ\n   =ALI *b\n   =ALI *a\n   +SEQ []\n    =VAL :c\n    =ALI *b\n    =VAL :d\n   -SEQ\n  -MAP\n -DOC\n-STR\n"
  yaml: "{ &a [a, &b b]: *b, *a : [c, *b, d]}\n"
