tests/snapshots/yaml_suite_snapshots__yaml_suite_X4QW_full.snap
---
source: tests/yaml_suite_snapshots.rs
expression: full
---
- name: Comment without whitespace after block scalar indicator
  from: "@perlpunk"
  tags: folded comment error whitespace
  fail: true
  yaml: "block: ># comment\n  scalar\n"
  tree: "+STR\n +DOC\n  +MAP\n   =VAL :block\n"
