tests/snapshots/yaml_suite_snapshots__yaml_suite_X4QW_tight.snap
---
source: tests/yaml_suite_snapshots.rs
expression: tight
---
- fail: true
  from: "@perlpunk"
  name: Comment without whitespace after block scalar indicator
  tags: folded comment error whitespace
  tree: "+STR\n +DOC\n  +MAP\n   =VAL :block\n"
  yaml: "block: ># comment\n  scalar\n"
