tests/snapshots/yaml_suite_snapshots__yaml_suite_X8DW_med.snap
---
source: tests/yaml_suite_snapshots.rs
expression: med
---
- name: Explicit key and value seperated by comment
  from: "@perlpunk"
  tags: comment explicit-key mapping
  yaml: "---\n? key\n# comment\n: value\n"
  tree: "+STR\n +DOC ---\n  +MAP\n   =VAL :key\n   =VAL :value\n  -MAP\n -DOC\n-STR\n"
  json: "{\n  \"key\": \"value\"\n}\n"
  dump: "---\nkey: value\n"
