tests/snapshots/yaml_suite_snapshots__yaml_suite_X8DW_tight.snap
---
source: tests/yaml_suite_snapshots.rs
expression: tight
---
- dump: "---\nkey: value\n"
  from: "@perlpunk"
  json: "{\n  \"key\": \"value\"\n}\n"
  name: Explicit key and value seperated by comment
  tags: comment explicit-key mapping
  tree: "+STR\n +DOC ---\n  +MAP\n   =VAL :key\n   =VAL :value\n  -MAP\n -DOC\n-STR\n"
  yaml: "---\n? key\n# comment\n: value\n"
