tests/snapshots/yaml_suite_snapshots__yaml_suite_XLQ9_med.snap
---
source: tests/yaml_suite_snapshots.rs
expression: med
---
- name: Multiline scalar that looks like a YAML directive
  from: "@perlpunk"
  tags: directive scalar
  yaml: "---\nscalar\n%YAML 1.2\n"
  tree: "+STR\n +DOC ---\n  =VAL :scalar %YAML 1.2\n -DOC\n-STR\n"
  json: "\"scalar %YAML 1.2\"\n"
  dump: "--- scalar %YAML 1.2\n...\n"
