tests/snapshots/yaml_suite_snapshots__yaml_suite_XLQ9_tight.snap
---
source: tests/yaml_suite_snapshots.rs
expression: tight
---
- dump: "--- scalar %YAML 1.2\n...\n"
  from: "@perlpunk"
  json: "\"scalar %YAML 1.2\"\n"
  name: Multiline scalar that looks like a YAML directive
  tags: directive scalar
  tree: "+STR\n +DOC ---\n  =VAL :scalar %YAML 1.2\n -DOC\n-STR\n"
  yaml: "---\nscalar\n%YAML 1.2\n"
