tests/snapshots/yaml_suite_snapshots__yaml_suite_XV9V_full.snap
---
source: tests/yaml_suite_snapshots.rs
expression: full
---
- name: "Spec Example 6.5. Empty Lines [1.3]"
  from: "5GBF, modified for YAML 1.3"
  tags: literal spec scalar 1.3-mod
  yaml: "Folding:\n  \"Empty line\n\n  as a line feed\"\nChomping: |\n  Clipped empty lines\n␣\n↵\n"
  tree: "+STR\n +DOC\n  +MAP\n   =VAL :Folding\n   =VAL \"Empty line\\nas a line feed\n   =VAL :Chomping\n   =VAL |Clipped empty lines\\n\n  -MAP\n -DOC\n-STR\n"
  json: "{\n  \"Folding\": \"Empty line\\nas a line feed\",\n  \"Chomping\": \"Clipped empty lines\\n\"\n}\n"
  dump: "Folding: \"Empty line\\nas a line feed\"\nChomping: |\n  Clipped empty lines\n"
